# am-dev

./: .gitignore  LOCAL_DEV.md  README.md  RUNNING.md  docker-compose.yml
.agent_log/chat_sessions/: chat_20260220_213353.json  chat_20260220_214630.json
dev-agent-python/: .env  .env.example  Dockerfile  debug_imports.py  pyproject.toml  requirements.txt  verify_codex_connection.py
dev-agent-python/app/: git_tools.py  main.py  tasks.py  worker.py
dev-agent-python/app/agents/: advisor.py  graph.py  knowledge_graph.py  sandbox.py  state.py  wrapper.py
dev-agent-python/app/agents/logic/: classifier.py  completion_checker.py  ensembler.py  job_controller.py  manifest_writer.py  memory.py  react_guard.py  reflection.py  risk_engine.py  sanitizer.py  strategy_router.py  token_monitor.py
dev-agent-python/app/agents/nodes/: architect.py  coder.py  manager.py  orchestrator.py  planner.py  react.py  reviewer.py  tester.py
dev-agent-python/app/api/endpoints/: jobs.py  stream.py
dev-agent-python/app/core/: budget.py  config.py  errors.py  health.py  logging_config.py  merge.py  security.py  stream.py
dev-agent-python/app/tools/: browser.py  lsp.py
dev-agent-python/scripts/: stress_test_harness.py
dev-agent-ui/: Dockerfile  README.md  pubspec.yaml
dev-agent-ui/lib/: main.dart
dev-agent-ui/test/: widget_test.dart
dev-agent-ui/web/: index.html  manifest.json
docs/: architecture_comparison.md  architecture_review.md  implementation_plan.md  task.md  walkthrough.md
infra/: docker-compose.yml
